--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "file-saver": "^2.0.5",
         "primeflex": "^3.3.1",
         "primeicons": "6.0.1",
-        "primeng": "16.0.2",
+        "primeng": "^16.1.0",
         "prismjs": "^1.29.0",
         "quill": "^1.3.7",
         "rxjs": "~7.8.0",
