--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
         "chart.js": "^3.3.2",
         "file-saver": "^2.0.5",
         "primeflex": "^3.3.1",
-        "primeicons": "6.0.1",
-        "primeng": "^16.1.0",
+        "primeicons": "^7.0.0",
+        "primeng": "^16.4.4",
         "prismjs": "^1.29.0",
         "quill": "^1.3.7",
         "rxjs": "~7.8.0",
